# ScreenCap

./: CMakeLists.txt  LICENSE.txt
cmake/: FindLibAvCodec.cmake  FindSFML.cmake
src/: CMakeLists.txt  clock.hpp  clockMono.cpp  clockMono.hpp  configurationManager.hpp  configurationManagerImpl.cpp  configurationManagerImpl.hpp  imageManager.hpp  imageManagerComplex.cpp  imageManagerComplex.hpp  imageManagerSimple.cpp  imageManagerSimple.hpp  main.cpp  messageQueue.hpp  messageQueueLocked.cpp  messageQueueLocked.hpp  messageQueueUser.hpp  screenCapturer.hpp  screenCapturerImpl.cpp  screenCapturerImpl.hpp  screenDumper.hpp  screenDumperX264.cpp  screenDumperX264.hpp  screenReciever.hpp  screenRecieverPng.cpp  screenRecieverPng.hpp  screenRecieverX264.cpp  screenRecieverX264.hpp  signalHandler.hpp  signalHandlerImpl.cpp  signalHandlerImpl.hpp  threadRunner.hpp  threadRunnerSimple.cpp  threadRunnerSimple.hpp  x264ImageFormat.hpp
